Update Authorization swagger docs
